test/ui/src/compile_fail/std/sample_missing_name.rs
fn main() {
    emit::sample!(value: 42);
}
